src/modules/featureInfo/components/featureInfoIframePanel/featureInfoIframePanel.css
.ba-list-item {
	display: flex;
	text-decoration: none;
	overflow-wrap: break-word;
	background: transparent;
	border: 0;
	width: 100%;
	text-align: left;
}
.ba-list-item:focus-visible {
	box-shadow: Inset 0 0 0 0.2em var(--primary-color-lighter);
}
.ba-list-item:hover {
	background: var(--header-background-color);
}
.ba-list-item span {
	overflow-wrap: break-word;
}
.ba-list-item > * {
	padding-top: 0.8em;
	padding-bottom: 0.8em;
}
.ba-list-item > *:first-child {
	padding-left: 1.5em;
}
.ba-list-item > *:last-child {
	padding-right: 1.5em;
}
.ba-list-item__pre {
	display: flex;
	margin: 0 1em 0 0;
}
.ba-list-item__after {
	display: flex;
	padding-left: 1.5em;
	position: relative;
	background: transparent;
	border: 0;
}
.ba-list-item__image {
	height: 4em;
	width: 8em;
	min-width: 8em;
	background: var(--secondary-bg-color);
	background-position: center;
	background-repeat: no-repeat;
	background-size: cover;
}
.ba-list-item__icon {
	height: 3em;
	width: 3em;
	border-radius: 2em;
	background: var(--secondary-bg-color);
	background-position: center;
	background-repeat: no-repeat;
	background-size: cover;
}
.ba-list-item__text {
	flex-grow: 1;
}
.ba-list-item__main-text {
	font-size: 1.7rem;
}
.ba-list-item__primary-text {
	display: block;
	font-size: 1rem;
	font-weight: bold;
}
.ba-list-item__secondary-text {
	font-size: 0.95rem;
	color: var(--text2);
}
.ba-list-item__sub-header {
	opacity: 0.8;
	margin-left: 1.5em;
}
.ba-list-item__sub-header .ba-list-item__text {
	padding-left: 0;
	font-size: 0.9rem;
}
.ba-list-item__sub-header:hover {
	background: none;
}
.ba-section {
	border-left: 0.3em solid var(--primary-bg-color);
}
.ba-section .ba-list-item > *:first-child {
	padding-left: 1.2em;
}
.ba-section:hover {
	border-left: 0.3em solid var(--secondary-color);
}
.ba-list-item__header {
	cursor: default;
}
.ba-section:hover .ba-list-item__header .ba-list-item__text {
	color: var(--primary-color) 0.3;
}
.ba-section:hover .ba-list-item__header {
	color: var(--secondary-color);
}
.ba-list-item__header.is-geometry:hover {
	color: var(--highlight-map-color);
}
.divider {
	border-bottom: var(--border1-width) var(--border1-style) var(--border1-color);
}
.vertical-center {
	margin: auto;
}
.ba-list {
	background-color: var(--tertiary-bg-color);
	box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.5);
}
.collapse-content {
	padding: 0 1.2em 1em;
	overflow-x: scroll;
}
.featureinfo-header {
	position: sticky;
	z-index: calc(var(--z-header) + 92);
	top: 0;
	background-color: var(--tertiary-bg-color);
	border-bottom: var(--border1-width) var(--border1-style) var(--border1-color);
}
.featureinfo-header:hover {
	background-color: var(--tertiary-bg-color);
}
table,
tr,
td,
th {
	border: 0;
	background: transparent;
	width: 100%;
}

a {
	color: var(--text4);
}
a:hover {
	text-decoration: underline;
}

table {
	margin-bottom: 1em;
	position: relative;
	border-collapse: collapse;
	border: var(--border1-width) var(--border1-style) var(--border1-color);
}
table:not(:only-of-type):not(:last-child):after {
	content: ' ';
	position: absolute;
	left: -1em;
	right: -1em;
	bottom: -1.5em;
	border-bottom: var(--border1-width) var(--border2-style) var(--border1-color);
}
tr {
	padding: 0 0 0.8em 0;
	border: 1px solid var(--header-background-color);
}
th,
td {
	padding: 0.8em 1em;
	width: auto;
}
td:nth-last-child(2):first-child {
	opacity: 0.8;
	font-size: 0.9rem;
	font-weight: bold;
	color: var(--text1);
	min-width: 11em;
	max-width: 22em;
	width: auto;
	vertical-align: top;
	padding-top: 0.9em;
}
.collapse-content b {
	font-size: 0.9rem;
	opacity: 0.8;
}
caption {
	text-align: left;
	padding: 0.8em 1em;
}
.table-striped > tbody > tr:nth-of-type(odd) {
	background: var(--header-background-color);
}
img {
	width: 100%;
	max-width: 25em;
	height: auto;
}

p,
h1,
h2,
h3,
h4,
h5 {
	margin: 1em 0;
}

.button {
	cursor: pointer;
	padding: 0.8em 1em;
	background: transparent;
	background-color: transparent;
	border: none;
	font-weight: bold;
	transition: all var(--animation-duration-medium-open) var(--animation-easing-linear);
	display: inline-block;
}
.primary {
	background-color: var(--primary-color);
	color: var(--text3);
	opacity: 0.8;
}
.secondary {
	background-color: var(--primary-bg-color);
	color: var(--primary-color);
}
.primary.button:focus-visible {
	opacity: 1;
}
.secondary.button:focus-visible {
	background: var(--primary-color);
	color: var(--text3);
}
.secondary.button:focus-visible,
.primary.button:focus-visible,
.loading.button:focus-visible {
	box-shadow: 0 0 0 0.2em var(--primary-color-lighter);
}
.primary:hover {
	opacity: 1;
	text-decoration: none;
}
.secondary:hover {
	background: var(--primary-color);
	color: var(--text3);
	text-decoration: none;
}

/*Fixme: remove temporary workaround for OpenData*/
a[href^='https://geodaten.bayern.de/odd/'] {
	cursor: pointer;
	padding: 0.8em 1em;
	background: transparent;
	border: none;
	font-weight: bold;
	transition: all var(--animation-duration-medium-open) var(--animation-easing-linear);
	background-color: var(--primary-color);
	color: var(--text3);
	opacity: 0.8;
	display: block;
	text-align: center;
}
a[href^='https://geodaten.bayern.de/odd/']:hover {
	opacity: 1;
	text-decoration: none;
}

.icon-rotate-90 {
	-moz-transform: rotate(90deg);
	-webkit-transform: rotate(90deg);
	transform: rotate(90deg);
	transition: all var(--animation-duration-large-open) var(--animation-easing-open);
}
.iconexpand {
	-moz-transform: rotate(270deg);
	-webkit-transform: rotate(270deg);
	transform: rotate(270deg);
}
.prop-header {
	margin-top: 0.5em;
}
.prop-header:hover {
	background: none;
}
.prop-header .icon {
	background: var(--primary-color);
	-webkit-mask-repeat: no-repeat;
	cursor: pointer;
	display: inline-block;
	height: 1em;
	width: 0.625em;
}
.prop-header .ba-list-item__text.ba-list-item__primary-text {
	color: var(--text2);
	padding: 0.5em 0;
}
.prop-header .ba-list-item__after {
	padding: 0.5em 0.4em 0 0.5em;
}
.chevron {
	transform: rotate(270deg);
}
.prop-header .chevron {
	display: block;
	position: relative;
	mask: url('../../../../assets/icons/chevron-right.svg');
	-webkit-mask-image: url('../../../../assets/icons/chevron-right.svg');
	mask-image: url('../../../../assets/icons/chevron-right.svg');
}
.propshide .chevron {
	transform: rotate(90deg);
}
.propshide + table {
	display: none;
}

